Update ome.service to use OME_HOST_IP environment variable for improved configuration

--- a/ome/origin/ome.service
+++ b/ome/origin/ome.service
@@ -6,7 +6,7 @@ Requires=docker.service
 [Service]
 Type=oneshot
 RemainAfterExit=true
-Environment=OME_HOST_IP=$DOMAIN
+Environment=OME_HOST_IP=$OME_HOST_IP
 Environment=OME_DOCKER_HOME=$OME_DOCKER_HOME
 ExecStart=$OME_DOCKER_HOME/ome-startd.sh
 TimeoutStartSec=0 
