Refactor ome-startd.sh and ome.service for improved configuration and clarity

--- a/ome/origin/ome.service
+++ b/ome/origin/ome.service
@@ -6,6 +6,8 @@ Requires=docker.service
 [Service]
 Type=oneshot
 RemainAfterExit=true
+Environment=OME_HOST_IP=live-ca-rise2-origin.muselink.com
+Environment=OME_DOCKER_HOME=/opt/ovenmediaengine
 ExecStart=/opt/ovenmediaengine/ome-startd.sh
 TimeoutStartSec=0 
 
