Refactor Server.xml, ome-startd.sh, and ome.service for improved environment variable handling and clarity; add ome-record-worker.sh for processing and uploading HLS streams

--- a/ome/origin/ome.service
+++ b/ome/origin/ome.service
@@ -6,10 +6,11 @@ Requires=docker.service
 [Service]
 Type=oneshot
 RemainAfterExit=true
-Environment=OME_HOST_IP=live-ca-rise2-origin.muselink.com
-Environment=OME_DOCKER_HOME=/opt/ovenmediaengine
 ExecStart=/opt/ovenmediaengine/ome-startd.sh
 TimeoutStartSec=0 
 
 [Install]
 WantedBy=multi-user.target
+
+# Environment=OME_HOST_IP=live-ca-rise2-origin.muselink.com
+# Environment=OME_DOCKER_HOME=/opt/ovenmediaengine
